@@ -348,7 +348,7 @@ public class RulesAttachment extends DefaultAttachment
   public void setUses(String s) {
 	  m_uses = getInt(s);
   }
-  public void setUses(int u) {
+  public void setUses(Integer u) {
 	  m_uses = u;
   }
   
